# ai-flex-client

./: .gitignore  pyproject.toml
.claude/: CLAUDE.md  settings.json
data/: llm_models.json  pricing_urls.txt
src/ai_flex_client/: anthro_impl.py  base_query.py  data_wrapper.py  gemini_impl.py  grok_impl.py  model_name.py  model_registry.py  openai_impl.py  provider_config.py  synth_impl.py  test_all.py  utility.py  venice_impl.py
src/ai_flex_client/data/: llm_models.json  pricing_urls.txt
src/flex_client/: anthro_impl.py  anthropic.py  base_query.py  data_wrapper.py  gemini.py  openai.py  openai_impl.py  synth_impl.py  test_all.py  utility.py
