[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_flex_client"
version = "0.1.0"
description = "Flexible AI client, allow transparent swapping between APIs"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    { name = "Dan Burfoot" }
]

dependencies = []
